--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "font-awesome": "^4.7.0",
     "multer": "^1.3.1",
     "path": "^0.12.7",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-router-dom": "^4.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-emoji": "^0.5.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-redux": "^7.1.0-rc.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
-    "react-redux": "^5.0.7",
+    "react-toastify": "^6.0.8",
+    "react-typing-effect": "^2.0.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
